# dense-fusion-ros

./: CMakeLists.txt  README.md  package.xml
node_scripts/: dense_fusion_node.py
sample/: sample_dense_fusion.launch
sample/include/: play_rosbag_ycb_video.xml
sample/rviz/: dense_fusion.rviz
scripts/: install_sample_data.py
