<?xml version="1.0"?>
<package format="2">
  <name>dense_fusion_ros</name>
  <version>0.0.1</version>
  <description>ROS Wrapper of DenseFusion</description>

  <url type="website">https://github.com/iory/dense-fusion-ros</url>

  <author email="ab.ioryz@gmail.com">iory</author>
  <maintainer email="ab.ioryz@gmail.com">iory</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-gdown-pip</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>python-gdown-pip</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
